mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/abiEncoder/conflicting_settings_reverse.sol
pragma abicoder v1;
pragma abicoder v2;
// ----
// Warning 9511: (0-19): ABI coder v1 is deprecated and scheduled for removal. Use ABI coder v2 instead.
// SyntaxError 3845: (20-39): ABI coder has already been selected for this source unit.
